css/style.css
/* ... */
#person-description-container {
  max-width: 590px;
  padding-left: var(--main-content-spacing);
  height: 100%;
  display: flex;
  align-items: center;
}

#main-part-content {
  position: relative;
  padding: var(--main-content-spacing) var(--main-content-spacing) 0;
  height: calc(100% - var(--main-content-spacing));
}

#main-wrapper {
  position: relative;
  max-width: 1920px;
  margin: 0 auto;
}

#main-play-button {
  position: fixed;
  bottom: var(--main-content-spacing);
  right: var(--main-content-spacing);
  cursor: pointer;
  display: var(--display-main-play-button);
}

#scroll-down-button-container {
  position: absolute;
  top: calc(var(--with-address-bar-height) - 88px);
  right: 0;
  left: 0;
  display: flex;
  justify-content: center;
  align-items: center;
}

#scroll-down-button-container svg {
  transform: rotate(90deg);
}

#language-item-uk > svg,
#language-item-en > svg {
  display: none;
}

#main-quote-mobile {
  display: none;
}

.mobile {
  display: none;
}

.desktop {
  display: block;
}

.selected > svg {
  display: block !important;
}

.main-title {
  font-size: var(--h1-custom-font-size);
}

.life-dates {
  font-size: var(--h3-custom-font-size);
  margin: 0 0.005vw 0 0;
}

.name-life-dates-box {
  display: flex;
  align-items: baseline;
  justify-content: space-between;
}

.person-name {
  line-height: var(--h2-custom-font-size);
}

.button-outlined {
  border: var(--border-width) solid var(--main-color);
  background: transparent;
  color: inherit;
  font-family: inherit;
  font-weight: inherit;
  padding: 2px 5px;
}

.button-end-icon {
  display: flex;
  align-items: center;
}

.biography-button {
  font-size: 40px;
  margin: 20px 0;
  padding-top: 2px;
}

.button-text {
  padding: 0 10px;
}

.main-quote-container {
  border-left: 4px solid var(--main-color);
  padding: 8px 0 9px 16px;
  margin-left: 6px;
  font-size: 38px;
  text-shadow: 1px 1px 2px var(--bg-color);
}

.main-quote {
  display: flex;
  margin: 80px 0 124px;
}

.main-quote-mobile {
  display: flex;
  margin: 20px 0 48px;
}

.main-action-bar-container {
  position: absolute;
  top: var(--main-content-spacing);
  right: var(--main-content-spacing);
}

.main-action-bar {
  display: flex;
  align-items: center;
  column-gap: 16px;
}

.language-button {
  font-size: 32px;
}

.text-button {
  cursor: pointer;
  border: none;
  background: transparent;
  padding: 8px 8px;
  user-select: none;
}

.icon-button {
  cursor: pointer;
  padding: 8px;
}

.main-play-button-mobile {
  cursor: pointer;
  display: none;
  margin-top: 30px;
}

#scroll-down-button {
  cursor: pointer;
  width: 200px;
  max-width: 100vw;
  display: flex;
  justify-content: center;
}

.dark-theme-icon {
  display: var(--display-dark-theme-icon);
}

.light-theme-icon {
  display: var(--display-light-theme-icon);
}

.container-title {
  font-size: var(--h2-custom-font-size);
}

.secondary-container {
  position: relative;
  padding: var(--main-content-spacing) var(--main-content-spacing) 0;
}

.container-title {
  display: flex;
  align-items: center;
}

.container-title .collapse-icon {
  transform: rotate(90deg);
  transition: transform 0.2s ease-in;
}

.container-title .container-title-text {
  margin-right: 10px;
}

.collapsible-container.open .collapse-icon {
  transform: rotate(270deg);
}

.standard-input {
  background-color: transparent;
  border: none;
  border-bottom: 4px solid var(--main-color);
  padding: 10px 12px;
  height: 32px;
  font-weight: 700;
  font-family: "Roboto Condensed", Roboto, serif;
  font-size: 32px;
  color: var(--main-color);
}

.standard-input::placeholder {
  font-weight: 700;
  font-family: "Roboto Condensed", Roboto, serif;
  font-size: 32px;
  color: var(--input-placeholder-color);
}

.standard-input:focus {
  outline: none;
}

.selector-language-item {
  cursor: pointer;
  display: flex;
  align-items: flex-end;
  font-size: 26px;
  padding-bottom: 20px;
  margin-right: 20px;
}

.selector-language-item > .selector-language-name {
  margin-right: 20px;
}

.selector-language-item > svg {
  padding-bottom: 2px;
}

.full-name-life-dates {
  max-width: min-content;
}

input[type="range"]::-webkit-slider-thumb {
  -webkit-appearance: none;
  appearance: none;
  width: 24px;
  height: 24px;
  background: var(--bg-color);
  cursor: pointer;
  border-radius: 50%;
  border: 4px solid var(--main-color);
  margin: 0;
}

input[type="range"]::-moz-range-thumb {
  width: 24px;
  height: 24px;
  background: var(--bg-color);
  cursor: pointer;
  border-radius: 50%;
  border: 4px solid var(--main-color);
  margin: 0;
}

input[type="range"]::-ms-thumb {
  width: 24px;
  height: 24px;
  background: var(--bg-color);
  cursor: pointer;
  border-radius: 50%;
  border: 4px solid var(--main-color);
  margin: 0;
}

#life-story-container {
  margin: 0 auto;
  max-width: 1920px;
}

.life-story-title {
  padding: var(--main-content-spacing) var(--main-content-spacing) 0;
}

#posts-container {
  padding: 30px calc(var(--main-content-spacing) / 2);
}

@media (max-width: 1535px) {
  .main-title {
    font-size: clamp(72px, 6.5vw, var(--h1-custom-font-size));
  }

  .life-dates {
    font-size: clamp(32px, 3vw, var(--h3-custom-font-size));
  }

  .person-name {
    line-height: clamp(54px, 5vw, var(--h2-custom-font-size));
  }
}
/* ... */

